# SPED_Analyzer

./: pyproject.toml
src/registers/: alphanumeric_blocks.py  numeric_blocks.py
src/sped_analyzer/: main.py  verifier.py
